--- a/share/RJwrapper.tex
+++ b/share/RJwrapper.tex
@@ -2,8 +2,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{RJournal}
-\usepackage[round]{natbib}
-\bibliographystyle{abbrvnat}
 \usepackage{amsmath,amssymb,array}
 \usepackage{booktabs}
 
@@ -12,11 +10,11 @@
 \begin{document}
 
 %% do not edit, for illustration only
-\fancyhf{}
-\fancyhead[LO,RE]{\textsc{Contributed Article}}
-\fancyhead[RO,LE]{\thepage}
-\fancyfoot[L]{The R Journal Vol. X/Y, Month, Year}
-\fancyfoot[R]{ISSN 2073-4859}
+\sectionhead{Contributed research article}
+\volume{XX}
+\volnumber{YY}
+\year{20ZZ}
+\month{AAAA}
 
 %% replace RJtemplate with your article
 \begin{article}
