--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -1,8 +1,7 @@
 \documentclass[a4paper]{report}
 \usepackage{RJournal}
-\usepackage[round]{natbib}
+\usepackage{moreverb}
 \usepackage{booktabs}
-\bibliographystyle{abbrvnat}
 
 \begin{document}
 
@@ -50,6 +49,7 @@ but thorough review process. Papers are expected to be reasonably short,
 clearly written, not too technical, and of course focused on R.
 
 Authors of refereed articles should take care to
+
 \begin{itemize}
 \item put their contribution in context, in particular discuss related R
   functions or packages;
@@ -107,14 +107,14 @@ The steps involved in preparing an article for submission to \emph{The
 \item Download \file{RJwrapper.tex}, \file{RJtemplate.tex},
 and \file{RJournal.sty}.
 
-\item Rename \file{RJtemplate.tex} using the author's or authors' last names
-(say, \file{Yourlastname.tex}), and replace its
+\item Rename \file{RJtemplate.tex} using the authors' last names in lower case 
+separated by hyphens, (e.g.\ \file{smith-jones.tex}). Replace its
 contents with the contents of your article.
 
 \item Create a \file{Yourlastname.bib} BibTeX file and add
 \verb|\bibliography{Yourlastname}| at the end of \file{Yourlastname.tex}.
 
-\item Modify \file{RJwrapper.tex} to include \file{Yourname.tex} rather
+\item Modify \file{RJwrapper.tex} to include \file{yourname.tex} rather
 than \file{RJtemplate.tex}. Include all necessary \LaTeX{} \verb|\usepackage|
 commands in the modified \file{RJwrapper.tex}.
 
@@ -127,10 +127,10 @@ commands in the modified \file{RJwrapper.tex}.
   \begin{itemize}
   \item The modified \file{RJwrapper.tex}
   \item \file{RJwrapper.pdf}
-  \item \file{Yourname.tex}
-  \item \file{Yourname.bib}
+  \item \file{yourname.tex}
+  \item \file{yourname.bib}
   \item all necessary figure files.
-  \item Do not include style files for other latex packages needed by your article.
+  \item Do not include \file{RJournal.sty} or style files for other latex packages needed by your article.
   \end{itemize}
 \end{itemize}
 
@@ -153,13 +153,7 @@ sexist language, such as the use of `he' for individuals of indefinite gender.
 
 \section{Marking text}
 
-The \LaTeX{} style file \file{RJournal.sty} provides a much simplified version of the
-commands for marking words and phrases used by
-Texinfo\footnote{\url{http://www.gnu.org/software/texinfo/}} (but note that the \LaTeX{} special
-characters still need special treatment). Please use these commands and the other
-mark-up facilities described in this section rather than attempting to format
-output and other elements visually. Unless it is absolutely necessary, please refrain from
-introducing additional idiosyncratic mark-up---for example, for programming languages.
+The \LaTeX{} style file \file{RJournal.sty} provides some useful commands for marking up words and phrases related to softare (as inspired by Texinfo). Please use these commands and the other mark-up facilities described in this section rather than attempting to format output and other elements visually. Unless it is absolutely necessary, please refrain from introducing additional idiosyncratic mark-up---for example, for programming languages.
 
 The commands provided are:
 
@@ -171,7 +165,7 @@ For example, \verb|\code{rows <- nrow(X)}| is typeset as
 \code{rows <- nrow(X)}. The \verb|\code| command should also
 be used for keyboard input and the names of objects, functions and
 arguments. Class names should be quoted; for example \verb|\code{"lm"}| is
-typeset as \code{"lm"}. 
+typeset as \code{"lm"}. This is a regular command so special latex characters like \verb|_| and \verb|\| will need to be escaped.
 
 \item[\code{$\backslash$ \\samp\{\var{text}\}}]
 indicates text that is a literal example of a sequence of
@@ -217,29 +211,33 @@ Note that no markup is necessary to typeset R. Likewise, no markup
 should be used to typeset the names of external software. In particular,
 the \verb|\pkg| command is reserved for R packages.
 
-\subsection{Quotations and examples}
+\subsection{Examples}
 
-In addition to the standard \LaTeX{} environments for quotations and examples (such
-as \verb|quote|, \verb|quotation|, \verb|flushleft|, \verb|center| and \verb|flushright|), the
-\pkg{\filename} package provides the following environments:
+Include examples with the verbatim-like \verb|example| environment. The text is printed in a fixed-width font, and indented but not filled.
 
-\begin{description}
+If you want to intermingle code and latex, you can use the \verb|example*| environment, which is a wrapper for \verb|altt|.
 
-\item[\code{example}]
-is used to illustrate code, commands, and the like.  The text is printed in a
-fixed-width font, and indented but not filled.
+\begin{example}
+# This is some example code. Please make sure to wrap lines to around 80
+# characters so that they fit nicely within the body of the text.
+#
+# Use indentation and spacing to improve the readability of code
+# listings where possible, e.g. put spaces after commas and around
+# equals signs.
+# 
+# For example, don't do:
+f <- function(y, debug=FALSE) {
+if (y<0 && debug)
+message("Y is negative")
+}
 
-\item[\code{smallexample}]
-is similar to \code{example}, except that text is typeset in a smaller
-font.
-
-\end{description}
-
-These are patterned after the Texinfo environments with the same
-names.  In particular, \verb|\{|, \verb|\}|, and \verb|\\| retain their ``usual'' meanings
-and are not treated verbatim, which is not optimal for displaying R
-code or output.  Hence, we also provide a \verb|smallverbatim| environment
-which works like \verb|verbatim| but uses a smaller font for typesetting.
+# Instead do:
+f <- function(y, debug = FALSE) {
+  if (y < 0 && debug) {
+    message("Y is negative")
+  }
+}
+\end{example}
 
 \subsection{Sectioning, titles, and abstract}
 
@@ -247,7 +245,7 @@ Use only \verb|\section| and \verb|\subsection| commands, not
 \verb|\section*| or \verb|\subsection*|.
 
 The title of the article should be set with initial capitals, as in
-\verb|\title{Drawing Diagrams with R}|. Only the initial word of
+\texttt{\\title\{Drawing Diagrams with R\}}. Only the initial word of
 section and subsection titles should be capitalized; for example,
 \verb|\section{Starting at the end}|. 
 
@@ -297,20 +295,16 @@ which will appear as $\log(x)$.
 \item Similarly, use \verb|\left| and \verb|\right| with
 delimiters in mathematical expressions in preference to bare delimiters:
 Do not write
-
 \begin{verbatim}
 \sum_{1=1}^{n}(X_{i}^{\prime} - 
   \overline{X}^{\prime})^2
 \end{verbatim}
-
 which will be typeset as $\sum_{1=1}^{n}(X_{i}^{\prime} - \overline{X}^{\prime})^2$,
 but rather
-
 \begin{verbatim}
 \sum_{1=1}^{n}\left(X_{i}^{\prime} - 
   \overline{X}^{\prime}\right)^2
 \end{verbatim}
-
 which will appear as $\sum_{1=1}^{n}\left(X_{i}^{\prime} - \overline{X}^{\prime}\right)^2$.
 
 \end{itemize}
@@ -337,33 +331,48 @@ Down &  3 & 4 \\
 A simple table with booktabs formatting.}
 \end{table}
 
+Variants of the figure and table environments that span the full width of the document are avialable: these are called \verb|widefigure| and \verb|widetable|.  Figures~\ref{fig:regular} and \ref{fig:wide} show the difference between the regular and wide figure variants.
+
+\begin{figure}[htbp]
+  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}%
+  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}
+  \caption{This figure should be the same width as the text.}
+  \label{fig:regular}
+\end{figure}
+
+\begin{widefigure}[htbp]
+  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}%
+  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}
+  \caption{This figure should span the page, but the caption should be the same width as the text. Use this environment sparingly}
+  \label{fig:wide}
+\end{widefigure}
+
 \section{References}
 \label{sec:references}
 
-The standard way to produce citations for \emph{The R Journal} is via the
+The standard way to produce citations for \emph{The R Journal} is via the natbib
 \verb|\citep| and \verb|\citet| commands (and their relatives)
 and a \file{.bib} file that contains the
-references in {\sc Bib}\TeX{} format.\footnote{We use the \pkg{natbib}
-package for citations.}  The citation in the first
+references in {\sc Bib}\TeX{} format\footnote{We use the \pkg{natbib}
+package for citations.}. The citation in the first
 paragraph of this style guide is of the form
-\verb|\citep{ihaka:1996}|.  Figure \ref{figure:bibexample}
+\verb|\citep{ihaka:1996}|. Figure \ref{figure:bibexample}
 shows an example file called \file{example.bib} which contains
 a single reference.
 
 A bibliography is produced from \file{example.bib}
-by placing the following line in \file{RJtemplate.tex} (or
-whatever you end up calling it):
-
+by placing the following line in \file{yourfilename.tex}:
 \begin{verbatim}
-\bibliography{example}
+\bibliography{yourfilename}
 \end{verbatim}
-
 and running \code{pdflatex} then \code{bibtex} on the file
-\file{RJwrapper.tex}, then running \code{pdflatex} as many times as
-necessary until \LaTeX{} stops complaining about undefined citations.
+\file{yourfilename.tex}, then running \code{pdflatex} as many times as
+necessary until \LaTeX{} stops complaining about undefined citations.  In R, you can use \code{tools::texi2pdf()} to automate this process.
 
-\begin{figure*}[b]
-\begin{center}
+It is not necessary to include the \code{natbib} package or a bibliography style: these are included in the RJournal style file.
+
+\begin{figure}[htbp]
+\centering
 \begin{boxedverbatim}
 @ARTICLE{R:Ihaka+Gentleman:1996,
   AUTHOR = {Ross Ihaka and Robert Gentleman},
@@ -376,12 +385,9 @@ necessary until \LaTeX{} stops complaining about undefined citations.
   URL = {http://www.amstat.org/publications/jcgs/}
 }
 \end{boxedverbatim}
-\end{center}
-\caption{\label{figure:bibexample}
-The contents of a file called \file{example.bib}.  This figure
-uses the \code{figure*} environment to span
-two columns.}
-\end{figure*}
+\caption{The contents of a file called \file{example.bib}.}
+\label{figure:bibexample}
+\end{figure}
 
 BibTeX will ignore capitalization in titles, unless words are
 protected inside curly braces, e.g.\ \verb|R| will appear as ``r'',
@@ -419,10 +425,42 @@ Parts of this style guide were adapted from documentation originally
 prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
 \LaTeX{} style file.
 
-\bibliography{RJreferences}
+\section{Changelog}
+
+\begin{itemize}
+  \item v0.5, 2008/09/04 --- Copy and edit Rnews.dtx.
+  
+\item v0.6, 2009/05/05 --- Require \pkg{tikz} for decoration of contents page.
+  Require \pkg{amsmath}, \pkg{pslatex}, \pkg{palatino}, \pkg{mathpazo}. Define
+  hyperref colors. (Re)define \verb|\sectionhead|, \verb|\abstract|. Simplify equation
+  numbering. Restyled colophon. Defined \verb|Sin|, \verb|Sout| and \verb|Schunk| enrionments.
+  \verb|\acronym| non longer changes text.
+  
+\item v0.7, 2010/07/01 -- Used \verb|\phantomsection| in chapter head so that
+  hyperlinks in toc jump to place above not below article title. Added \verb|\review|
+  command to set up head for book reviews - treated as hybrid of chapter and
+  section. Removed markup for mathematics as not recommended for use. Changed
+  Rnews references to RJournal references. Removed \verb|\startRnews| as unused.
+  
+\item v0.8, 2010/12/29 --- Added |table| environment for one-column tables.
+
+\item v0.9, 2012/01/13 --- Disabled ligatures in \verb|\code|.
+
+\item v0.10, 2013/01/08 --- Added back-links from bibliography
+
+\item v0.11, 2013/01/11 --- Dropped two-column format. Dropped custom figure and
+  table environments.  Use placeins package to keep figures and tables (now
+  floating) under control.
+
+\item v0.12, 2013/04/11 --- Tweaks to one column format. Use inconsolata for
+  for code. Switch example to verbatim; add example* for alltt. Slightly
+  increased spacing between lines and paragraphs. Don't use alternating 
+  headers. Support for wide figures (widefigure) and tables (widetable)
+  
+\end{itemize}
 
 \end{article}
 
+\bibliography{RJreferences}
+
 \end{document}
-
-
