Update to latest version of RJournal.sty

--- a/share/RJournal.sty
+++ b/share/RJournal.sty
@@ -91,12 +91,15 @@
 \renewcommand{\title}        [1]{\def\RJ@title{#1}}
 \newcommand  {\subtitle}     [1]{\def\RJ@subtitle{#1}}
 
-\setcounter{secnumdepth}{-1}
+% Control appearance of titles: make slightly smaller than usual, and 
+% suppress section numbering. See http://tex.stackexchange.com/questions/69749
+% for why we don't use \setcounter{secnumdepth}{-1} 
 
 \usepackage[medium]{titlesec}
-
-% Note that we put the title info in the TOC and the bookmarks when
-% creating PDF. Thus titles should only contain text.
+\usepackage{titletoc}
+\titleformat{\section}   {\normalfont\large\bfseries}{}{0em}{}
+\titleformat{\subsection}{\normalfont\normalsize\bfseries}{}{0em}{}
+\titlecontents{chapter}   [0em]{}{}{}{\titlerule*[1em]{.}\contentspage}
 
 % Article layout ---------------------------------------------------------------
 
@@ -152,10 +155,7 @@
   \renewcommand{\@seccntformat}[1]{}%
   \@startsection{chapter}{0}{0mm}{%
     -2\baselineskip \@plus -\baselineskip \@minus -.2ex}{\p@}{%
-    \phantomsection\normalfont\Huge\bfseries\raggedright}}
-
-% TOC entries for articles (chapters) should really look like sections.
-\renewcommand*\l@chapter{\@dottedtocline{0}{0pt}{1em}}
+    \phantomsection\normalfont\huge\bfseries\raggedright}}
 
 % Book reviews should appear as sections in the text and in the pdf bookmarks,
 % however we wish them to appear as chapters in the TOC. Thus we define an
@@ -187,41 +187,30 @@
 % is really the same as |\chapter*|.
 \renewcommand{\contentsname}{Contents}
 \renewcommand\tableofcontents{%
-  \begin{center}
-  \vspace{1cm}
-  \begin{tikzpicture}
-  \node[right,text width=15.5cm, draw=black, rounded corners=20pt,
-  fill=white,inner sep=2em, very thick]
-  {
-    \begin{minipage}[t][16.5cm][c]{1.0\linewidth}
-    \section*{\contentsname}
-   {
-    \@starttoc{toc}
-   }
-    \end{minipage}
-  };
-  \end{tikzpicture}
-  \end{center}
+   \vspace{1cm}
+   \section*{\contentsname}
+   { \@starttoc{toc} }
 }
 
 \renewcommand{\titlepage}{%
   \thispagestyle{empty}
   \hypersetup{
-    pdftitle={The R Journal Volume \RJ@volume/\RJ@number, \RJ@date},%
+    pdftitle={The R Journal Volume \RJ@volume/\RJ@number, \RJ@month \RJ@year},%
     pdfauthor={R Foundation for Statistical Computing},%
   }
   \noindent
   \begin{center}
-    \fontsize{60pt}{60pt}\selectfont
+    \fontsize{50pt}{50pt}\selectfont
     The \raisebox{-8pt}{\includegraphics[height=77pt]{Rlogo-4}}\hspace{10pt}
     Journal
+  
   \end{center}
-  {\large\hfill Volume \RJ@volume/\RJ@number, \RJ@date\qquad}
-  \\[-.5\baselineskip]
+  {\large \hfill Volume \RJ@volume/\RJ@number, \RJ@month{} \RJ@year \quad}
+
   \rule{\textwidth}{1pt}
   \begin{center}
-    {\Large A peer-reviewed, open-access publication of the R Foundation\\
-      for Statistical Computing}
+    {\Large A peer-reviewed, open-access publication of the \\
+    R Foundation for Statistical Computing}
   \end{center}
 
   % And finally, put in the TOC box. Note the way |tocdepth| is adjusted
@@ -318,7 +307,7 @@
 
 % Figures ----------------------------------------------------------------------
 
-\RequirePackage[font=small,labelfont=bf,singlelinecheck=false]{caption}
+\RequirePackage[font=small,labelfont=bf]{caption}
 
 % Wide environments for figures and tables -------------------------------------
 \RequirePackage{environ}
