--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -62,8 +62,9 @@ appearing in the text.  Class names should appear in double quotes.
 \section*{General LaTeX issues}
 
 \begin{itemize}
-\item Put a trailing backslash -- \verb+.\+ -- after periods that are not at 
-  the end of a sentence (when using e.g., i.e., etc.).
+\item Put a trailing backslash -- \verb+.\+ -- after periods followed
+  by a space that are not at the end of a sentence (when using e.g.,
+  i.e., etc.).
 \item Use \verb+\url+ for all URLs. The file \texttt{RJwrapper.tex} 
   loads the LaTeX package ``url'' for you.
 \item Use booktabs format for tables (e.g.\ \verb+\toprule+, 
