Added new command \BIOpkg for Bioconductor packages.

--- a/share/RJournal.sty
+++ b/share/RJournal.sty
@@ -6,7 +6,7 @@
 % edits by the editorial board
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
-\ProvidesPackage{RJournal}[2013/05/17 v0.12 RJournal package]
+\ProvidesPackage{RJournal}[2013/08/27 v0.13 RJournal package]
 
 \RequirePackage{tikz}
 
@@ -266,6 +266,7 @@
 \newcommand{\CRANpkg}[1]{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}%
 \let\cpkg=\CRANpkg
 \newcommand{\ctv}[1]{\href{http://CRAN.R-project.org/view=#1}{\emph{#1}}}
+\newcommand{\BIOpkg}[1]{\href{http://www.bioconductor.org/packages/release/bioc/html/#1.html}{\pkg{#1}}}
 
 % Example environments ---------------------------------------------------------
 \RequirePackage{fancyvrb}
