--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -201,6 +201,11 @@ indicates an R package on CRAN, and includes a hyper-link to the
 corresponding web page. For example,
 \verb|\CRANpkg{Rcpp}| is typeset as \CRANpkg{Rcpp}.
 
+\item[\code{$\backslash$ \\BIOpkg}]
+indicates a Bioconductor package, and includes a hyper-link to
+the corresponding page on the Bioconductor web site. For example,
+\verb|\BIOpkg{affy}| is typeset as \BIOpkg{affy}.
+
 \item[\code{$\backslash$ \\url}] indicates a URL.
 For example,\\ \verb|\url{http://cran.r-project.org/}| is typeset
 as \url{http://cran.r-project.org/}.
@@ -213,14 +218,7 @@ the \verb|\pkg| command is reserved for R packages.
 
 \subsection{Examples}
 
-<<<<<<< HEAD
 Include examples with the verbatim-like \verb|example| environment. The text is printed in a fixed-width font, and indented but not filled.
-=======
-\item[\code{example}]
-is used to illustrate code, commands, and the like.  The text is printed in a
-fixed-width font, and indented but not filled. Note that tabs are ignored by
-the \code{example} environment: to indent your code correctly use spaces not tabs.
->>>>>>> 99caa05dd6f5bcc165bddbde1889663e2224452b
 
 If you want to intermingle code and latex, you can use the \verb|example*| environment, which is a wrapper for \verb|altt|.
 
@@ -416,7 +414,8 @@ AUTHOR = {{The R Journal Editors}}
 The first time a package is cited in the text, excluding the abstract,
 it should be followed by a formal citation, such as the one generated
 by the \verb|citation()| function in R. The first citation of a CRAN
-package should use \verb|\CRANpkg|. Further citations use \verb|\pkg|
+package should use \verb|\CRANpkg| and the first citation of a Bioconductor
+package should use \verb|\BIOpkg|. Further citations use \verb|\pkg|
 and need not be followed by a citation.
 
 The BibTeX entry for an R package should not use the \verb|\pkg|
@@ -459,11 +458,13 @@ prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
   table environments.  Use placeins package to keep figures and tables (now
   floating) under control.
 
-\item v0.12, 2013/04/11 --- Tweaks to one column format. Use inconsolata for
+\item v0.12, 2013/04/11 --- Tweaks to one column format. Use inconsolata
   for code. Switch example to verbatim; add example* for alltt. Slightly
   increased spacing between lines and paragraphs. Don't use alternating 
   headers. Support for wide figures (widefigure) and tables (widetable)
-  
+
+\item v0.13 2013/08/27 --- Added \verb|\BIOpkg| for Bioconductor packages.
+
 \end{itemize}
 
 \end{article}
