--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -4,7 +4,7 @@
 
 \title{R Journal Proof-reading Check List}
 \author{by the R Journal Editorial Board}
-\date{9 January 2012}
+\date{27 August 2013}
 \maketitle
 
 Your article has been accepted for publication in The R Journal. To
@@ -39,7 +39,9 @@ version to the handling editor.
   corresponding entry in the bibliography.
 \item The first mention of a CRAN package in the body text (not the title or
   abstract) should be marked up with \verb+\CRANpkg+. This
-  provides a hyper-link to the package homepage on CRAN.
+  provides a hyper-link to the package homepage on CRAN. Similarly,
+  the first mention of a Bioconductor package should be marked up with
+  \verb+\BIOpkg+.
 \item Other than the above, names of R packages should be marked up with 
   \verb+\pkg+, including in the title (This ensures that the
   package name is correctly formatted in the table of contents).
