Changed RJournal.bib to more closely resemble older format

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -2,19 +2,22 @@
 
 ---
 
+{% assign lbrace = '{' %}
+{% assign rbrace = '}' %}
+
 {% for issue in site.issues %}{% for article in issue.articles %}{% if article.slug %}
 
-{% if issue.volume < 5 %}
-@Article{RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}},
-  author       = { {{article.author | join: " and "}} },
-  title        = { { {{article.title}} } },
-  journal      = { {The R Journal} },
-  year         = { {{issue.year}} },
-  volume       = { {{issue.volume}} },
-  number       = { {{issue.num}} },
-  pages        = { {{article.pages | join: "--"}} },
-  month        = { {{issue.month}} },
-  url          = { http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf }
+{% if issue.volume < 6 %}
+@Article{ RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
+  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},
+  title        = {{lbrace}}{{lbrace}}{{article.title}}{{rbrace}}{{rbrace}},
+  journal      = {The R Journal},
+  year         = {{issue.year}},
+  volume       = {{issue.volume}},
+  number       = {{issue.num}},
+  pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},
+  month        = {{lbrace}}{{issue.month}}{{rbrace}},
+  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
 {% else %}
 @Article{ {{article.slug}}:{{issue.year}},
