added code to process bibauthor fields

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -9,7 +9,7 @@
 
 {% if issue.volume < 6 %}
 @Article{ RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
-  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},
+{% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor}}{{rbrace}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},{% endif %}
   title        = {{lbrace}}{{lbrace}}{{article.title}}{{rbrace}}{{rbrace}},
   journal      = {The R Journal},
   year         = {{issue.year}},
