remove braces from month

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -16,7 +16,7 @@
   volume       = {{issue.volume}},
   number       = {{issue.num}},
   pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},
-  month        = {{lbrace}}{{issue.month}}{{rbrace}},
+  month        = {{issue.month}},
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
 {% else %}
