--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -7,7 +7,7 @@
 
 {% for issue in site.issues %}{% for article in issue.articles %}{% if article.slug %}
 
-{% if issue.volume < 6 %}
+{% if issue.volume %}
 @Article{ RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
 {% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor}}{{rbrace}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},{% endif %}
   title        = {{lbrace}}{{lbrace}}{{article.title}}{{rbrace}}{{rbrace}},
