sync share folder

--- a/share/RJournal.sty
+++ b/share/RJournal.sty
@@ -28,7 +28,7 @@
 \fancyhead[L]{\textsc{\RJ@sectionhead}}
 \fancyhead[R]{\thepage}
 \fancyfoot{}
-\fancyfoot[L]{The R Journal Vol. \RJ@volume/\RJ@number, \RJ@month}
+\fancyfoot[L]{The R Journal Vol. \RJ@volume/\RJ@number, \RJ@month~\RJ@year}
 \fancyfoot[R]{ISSN 2073-4859}
 \pagestyle{fancy}
 
