--- a/share/RJtemplate.tex
+++ b/share/RJtemplate.tex
@@ -40,17 +40,17 @@ This file is only a basic article template. For full details of \emph{The R Jour
 \address{Author One\\
   Affiliation\\
   Address\\
-  Country}
+  Country\\}
 \email{author1@work}
 
 \address{Author Two\\
   Affiliation\\
   Address\\
-  Country}
+  Country\\}
 \email{author2@work}
 
 \address{Author Three\\
   Affiliation\\
   Address\\
-  Country}
+  Country\\}
 \email{author3@work}
