--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -9,25 +9,41 @@
 
 {% if issue.volume %}
 @Article{ RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
-{% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor}}{{rbrace}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},{% endif %}
-  title        = {{lbrace}}{{lbrace}}{{article.title}}{{rbrace}}{{rbrace}},
+{% if article.bibauthor %}
+  author       = {{lbrace}}{{article.bibauthor | join: " and " }}},
+{% else %}
+  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},
+{% endif %}
+{% if article.bibauthor %}
+  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}},
+{% else %}
+  title        = {{lbrace}}{{article.title}}{{rbrace}},
+{% endif %}
   journal      = {The R Journal},
   year         = {{issue.year}},
   volume       = {{issue.volume}},
   number       = {{issue.num}},
   pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},
-  month        = {{issue.month}},
+  month        = {{issue.bibmonth}},
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
 {% else %}
 @Article{ {{article.slug}}:{{issue.year}},
-  author       = { {{article.author | join: " and "}} },
-  title        = { {{article.title}} },
-  journal      = { The R Journal },
-  year         = { {{issue.year}} },
-  volume       = { {{issue.volume}} },
-  number       = { {{issue.num}} },
-  pages        = { {{article.pages | join: "--"}} },
-  month        = {{issue.month}},
-  url          = { http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf }
+{% if article.bibauthor %}
+  author       = {{lbrace}}{{article.bibauthor | join: " and " }}},
+{% else %}
+  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},
+{% endif %}
+{% if article.bibauthor %}
+  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}},
+{% else %}
+  title        = {{lbrace}}{{article.title}}{{rbrace}},
+{% endif %}
+  journal      = {The R Journal},
+  year         = {{issue.year}},
+  volume       = {{issue.volume}},
+  number       = {{issue.num}},
+  pages        = {{lbrace}}{{{article.pages | join: "--"}}{{rbrace}},  
+  month        = {{issue.bibmonth}},
+  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf }
 {% endif %}{% endif %}{% endfor %}{% endfor %}
