--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -8,17 +8,9 @@
 {% for issue in site.issues %}{% for article in issue.articles %}{% if article.slug %}
 
 {% if issue.volume %}
-@Article{ RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
-{% if article.bibauthor %}
-  author       = {{lbrace}}{{article.bibauthor | join: " and " }}},
-{% else %}
-  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},
-{% endif %}
-{% if article.bibauthor %}
-  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}},
-{% else %}
-  title        = {{lbrace}}{{article.title}}{{rbrace}},
-{% endif %}
+@Article{RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
+{% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
+{% if article.bibauthor %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
   journal      = {The R Journal},
   year         = {{issue.year}},
   volume       = {{issue.volume}},
@@ -28,22 +20,14 @@
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
 {% else %}
-@Article{ {{article.slug}}:{{issue.year}},
-{% if article.bibauthor %}
-  author       = {{lbrace}}{{article.bibauthor | join: " and " }}},
-{% else %}
-  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}},
-{% endif %}
-{% if article.bibauthor %}
-  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}},
-{% else %}
-  title        = {{lbrace}}{{article.title}}{{rbrace}},
-{% endif %}
+@Article{{lbrace}}{{article.slug}}:{{issue.year}},
+{% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
+{% if article.bibauthor %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
   journal      = {The R Journal},
   year         = {{issue.year}},
   volume       = {{issue.volume}},
   number       = {{issue.num}},
   pages        = {{lbrace}}{{{article.pages | join: "--"}}{{rbrace}},  
   month        = {{issue.bibmonth}},
-  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf }
+  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf}
 {% endif %}{% endif %}{% endfor %}{% endfor %}
