RJournal.bib corrected

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -10,7 +10,7 @@
 {% if issue.volume %}
 @Article{RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
 {% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
-{% if article.bibauthor %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
+{% if article.bibtitle %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
   journal      = {The R Journal},
   year         = {{issue.year}},
   volume       = {{issue.volume}},
@@ -22,7 +22,7 @@
 {% else %}
 @Article{{lbrace}}{{article.slug}}:{{issue.year}},
 {% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
-{% if article.bibauthor %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
+{% if article.bibtitle %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
   journal      = {The R Journal},
   year         = {{issue.year}},
   volume       = {{issue.volume}},
