update link to author guide

--- a/share/RJtemplate.tex
+++ b/share/RJtemplate.tex
@@ -33,7 +33,7 @@ There will likely be several sections, perhaps including code snippets, such as:
 
 \section{Summary}
 
-This file is only a basic article template. For full details of \emph{The R Journal} style and information on how to prepare your article for submission, see the \href{http://journal.r-project.org/latex/RJauthorguide.pdf}{Instructions for Authors}.
+This file is only a basic article template. For full details of \emph{The R Journal} style and information on how to prepare your article for submission, see the \href{http://journal.r-project.org/share/author-guide.pdf}{Instructions for Authors}.
 
 \bibliography{RJreferences}
 
