--- a/share/proofreading-checklist.tex
+++ b/share/proofreading-checklist.tex
@@ -53,6 +53,7 @@ version to the handling editor.
 \section*{R code}
 
 \begin{itemize}
+\item Use the \verb|example| environment for code examples.
 \item Use \verb+\code{}+ to mark up functions, objects, argument names etc.\
 appearing in the text.  Class names should appear in double quotes.
 \item Ensure that code listings do not overflow the right hand margin.
