URL and slug corrected

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -7,7 +7,7 @@
 
 {% for issue in site.issues %}{% for article in issue.articles %}{% if article.slug %}
 
-{% if issue.volume %}
+{% if issue.volume <= 4%}
 @Article{RJournal:{{issue.year}}-{{issue.num}}:{{article.slug}},
 {% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
 {% if article.bibtitle %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
