--- a/share/RJournal.sty
+++ b/share/RJournal.sty
@@ -263,9 +263,9 @@
 {{\normalfont\fontseries{b}\selectfont #1}}%
 {#1}}
 \let\pkg=\strong
-\newcommand{\CRANpkg}[1]{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}%
+\newcommand{\CRANpkg}[1]{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}%
 \let\cpkg=\CRANpkg
-\newcommand{\ctv}[1]{\href{http://CRAN.R-project.org/view=#1}{\emph{#1}}}
+\newcommand{\ctv}[1]{\href{https://CRAN.R-project.org/view=#1}{\emph{#1}}}
 \newcommand{\BIOpkg}[1]{\href{http://www.bioconductor.org/packages/release/bioc/html/#1.html}{\pkg{#1}}}
 
 % Example environments ---------------------------------------------------------
@@ -279,11 +279,13 @@
 % These used to have fontshape=sl for Sinput/Scode/Sin, but pslatex
 % won't use a condensed font in that case.
 
-\DefineVerbatimEnvironment{Sinput}{Verbatim}{fontsize=\small}
-\DefineVerbatimEnvironment{Soutput}{Verbatim}{fontsize=\small}
-\DefineVerbatimEnvironment{Scode}{Verbatim}{fontsize=\small}
-\DefineVerbatimEnvironment{Sin}{Verbatim}{fontsize=\small}
-\DefineVerbatimEnvironment{Sout}{Verbatim}{fontsize=\small}
+% Update (2015-05-28 by DS): remove fontsize=\small to match example environment
+
+\DefineVerbatimEnvironment{Sinput}{Verbatim}{}
+\DefineVerbatimEnvironment{Soutput}{Verbatim}{}
+\DefineVerbatimEnvironment{Scode}{Verbatim}{}
+\DefineVerbatimEnvironment{Sin}{Verbatim}{}
+\DefineVerbatimEnvironment{Sout}{Verbatim}{}
 \newenvironment{Schunk}{}{}
 
 % Mathematics ------------------------------------------------------------------
