--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -27,7 +27,8 @@
   year         = {{issue.year}},
   volume       = {{issue.volume}},
   number       = {{issue.num}},
-  pages        = {{lbrace}}{{{article.pages | join: "--"}}{{rbrace}},  
+  pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},  
   month        = {{issue.bibmonth}},
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf}
+{{rbrace}}
 {% endif %}{% endif %}{% endfor %}{% endfor %}
