change board names

--- a/share/author-guide.tex
+++ b/share/author-guide.tex
@@ -27,36 +27,36 @@ with information for preparing submissions to the \emph{Journal}.
 \emph{The R Journal} is the refereed journal of the R Project for Statistical
 Computing \citep{ihaka:1996}.
 It features short to medium length articles covering topics
-that might be of interest to users or developers of R, including:
+that might be of interest to users or developers of R.
 
-\begin{itemize}
-
-\item Short introductions to R packages.
-
-\item Demonstrating how a new or existing technique can be
-applied in an area of current interest using R, providing a fresh view
-of such analyses in R that is of benefit beyond the specific application.
-
-\item Hints for programming in R.
-
-\item Hints for newcomers explaining aspects of R that might
-  not be obvious from reading the manuals and FAQs.
-
-\end{itemize}
-
-\emph{The R Journal} intends to reach a wide audience and have a fast-track
-but thorough review process. Papers are expected to be reasonably short,
-clearly written, not too technical, and of course focused on R.
-
-Authors of refereed articles should take care to
+\emph{The R Journal} intends to reach a wide audience and have a 
+thorough review process. Papers are expected to be reasonably short,
+clearly written, not too technical, and of course focused on R. Authors 
+of refereed articles should take care to:
 
 \begin{itemize}
 \item put their contribution in context, in particular discuss related R
-  functions or packages;
+  functions or packages; 
 \item explain the motivation for their contribution;
 \item provide code examples that are reproducible.
 \end{itemize}
 
+Following revision of the content description of The R Journal, 
+from January 2017 submitted articles may include:
+
+\begin{itemize}
+
+\item \emph{Reviews and proposals}: surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.
+
+\item \emph{Comparisons and benchmarking}: of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.
+
+\item \emph{Applications}: demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.
+
+\item \emph{Add-on packages}: short introductions to contributed R packages that are already available on CRAN or Bioconductor, and going beyond package vignettes in aiming to provide broader context and to attract a wider readership than package users. Authors need to make a strong case for such introductions, based for example on novelty in implementation and use of R, or the introduction of new data structures representing general architectures that invite re-use. Authors of narrower package-introduction articles may wish to consider alternatives such as The Journal of Open Source Software (\url{http://joss.theoj.org/}) or in the life sciences, the F1000 Bioconductor (\url{https://f1000research.com/channels/bioconductor}) or Rpackage (\url{https://f1000research.com/channels/rpackage}) channels.
+
+\end{itemize}
+
+\noindent
 \emph{The R Journal} also has a \emph{News and Notes} section,
 including information on:
 
@@ -115,11 +115,12 @@ contents with the contents of your article.
 \verb|\bibliography{Yourlastname}| at the end of \file{Yourlastname.tex}.
 
 \item Modify \file{RJwrapper.tex} to include \file{yourname.tex} rather
-than \file{RJtemplate.tex}. Include all necessary \LaTeX{} \verb|\usepackage|
-commands in the modified \file{RJwrapper.tex}.
+than \file{RJtemplate.tex}. Include any strictly essential \LaTeX{} 
+\verb|\usepackage| commands in the modified \file{RJwrapper.tex}.
 
-\item Run \code{pdflatex} on \file{RJwrapper.tex} a couple of times
-(until all figure references are resolved) to produce \file{RJwrapper.pdf}.
+\item Run \code{tools::texi2pdf} on \file{RJwrapper.tex} to produce 
+\file{RJwrapper.pdf}, using \code{clean=FALSE} to help in debugging 
+if necessary.
 
 \item Iterate until \file{RJwrapper.pdf} looks right.
 
@@ -129,7 +130,8 @@ commands in the modified \file{RJwrapper.tex}.
   \item \file{RJwrapper.pdf}
   \item \file{yourname.tex}
   \item \file{yourname.bib}
-  \item all necessary figure files.
+  \item all necessary figure files
+  \item an R script permitting the reproduction of examples in your submission and small data files --- use built-in data sets where sensible, see below. 
   \item Do not include \file{RJournal.sty} or style files for other latex packages needed by your article.
   \end{itemize}
 \end{itemize}
@@ -145,11 +147,21 @@ reviewers step through the code without retyping it.
 
 \section{Language}
 
-Articles in \emph{The R Journal} are written in English. We accept British and American
-spelling along with other national variations. We encourage authors for whom English is
-not their first language to have their papers edited by a competent copy-editor. We
-encourage all authors to conform to accepted norms of grammar and style, and to avoid
-sexist language, such as the use of `he' for individuals of indefinite gender.
+Articles in \emph{The R Journal} are written in English. We accept
+consistent British and American spelling along with other national
+variations. We encourage authors for whom English is not their first
+language to have their papers edited by a competent copy-editor. We
+encourage all authors to conform to accepted norms of grammar and style,
+and to avoid sexist language, such as the use of `he' for individuals
+of indefinite gender.
+
+\section{Copyright}
+
+Starting from 2017, all published articles are licensed under the Creative Commons Attribution 4.0 International license (CC BY 4.0, \url{http://creativecommons.org/licenses/by/4.0}. Until the end of 2016, and including issue 2016-2, published articles were licensed under the Creative Commons Attribution 3.0 Unported license (CC BY 3.0, \url{http://creativecommons.org/licenses/by/3.0/}).
+
+\section{References and attribution}
+
+The R Journal follows customary academic practice in requiring that text in submissions and code and text in software be properly attributed. Quoted text must be attributed correctly and included in references; plagiarism and self-plagiarism will lead to rejection of submissions.
 
 \section{Marking text}
 
@@ -232,15 +244,19 @@ If you want to intermingle code and latex, you can use the \verb|example*| envir
 # 
 # For example, don't do:
 f <- function(y, debug=FALSE) {
+stopifnot(is.numeric(y) && length(y) == 1)
 if (y<0 && debug)
 message("Y is negative")
+invisible(y)
 }
 
 # Instead do:
 f <- function(y, debug = FALSE) {
+  stopifnot(is.numeric(y) && length(y) == 1)
   if (y < 0 && debug) {
     message("Y is negative")
   }
+  invisible(y)
 }
 \end{example}
 
@@ -281,9 +297,9 @@ for each author. For example
 \address{Paul Murrell\\
   Department of Statistics\\
   The University of Auckland\\
-  New Zealand}\\
-\email{paul@stat.auckland.ac.nz}
-\end{verbatim}
+  New Zealand\\
+  \email{paul@stat.auckland.ac.nz}}
+\end{verbatim}  
 
 \subsection{Mathematics}
 
@@ -339,15 +355,15 @@ A simple table with booktabs formatting.}
 Variants of the figure and table environments that span the full width of the document are avialable: these are called \verb|widefigure| and \verb|widetable|.  Figures~\ref{fig:regular} and \ref{fig:wide} show the difference between the regular and wide figure variants.
 
 \begin{figure}[htbp]
-  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}%
-  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}%
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}
   \caption{This figure should be the same width as the text.}
   \label{fig:regular}
 \end{figure}
 
 \begin{widefigure}[htbp]
-  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}%
-  \includegraphics[width=0.5\linewidth]{tests/pulled-pork-600-400.jpg}
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}%
+  \includegraphics[width=0.5\linewidth]{tests/wild_blackberries.jpg}
   \caption{This figure should span the page, but the caption should be the same width as the text. Use this environment sparingly}
   \label{fig:wide}
 \end{widefigure}
@@ -363,7 +379,7 @@ package for citations.}. The citation in the first
 paragraph of this style guide is of the form
 \verb|\citep{ihaka:1996}|. Figure \ref{figure:bibexample}
 shows an example file called \file{example.bib} which contains
-a single reference.
+a single reference. Note that inclusion of the DOI () bibtex field is desirable whenever a referenced item has a DOI; if \verb|doi| is used, \verb|url| should in general not be used.
 
 A bibliography is produced from \file{example.bib}
 by placing the following line in \file{yourfilename.tex}:
@@ -372,7 +388,7 @@ by placing the following line in \file{yourfilename.tex}:
 \end{verbatim}
 and running \code{pdflatex} then \code{bibtex} on the file
 \file{yourfilename.tex}, then running \code{pdflatex} as many times as
-necessary until \LaTeX{} stops complaining about undefined citations.  In R, you can use \code{tools::texi2pdf()} to automate this process.
+necessary until \LaTeX{} stops complaining about undefined citations.  In R, you can use \code{tools::texi2pdf()} to automate this process, as this is what is used in production.
 
 It is not necessary to include the \code{natbib} package or a bibliography style: these are included in the RJournal style file.
 
@@ -387,7 +403,7 @@ It is not necessary to include the \code{natbib} package or a bibliography style
   VOLUME = 5,
   NUMBER = 3,
   PAGES = {299--314},
-  URL = {http://www.amstat.org/publications/jcgs/}
+  DOI = {10.1080/10618600.1996.10474713}
 }
 \end{boxedverbatim}
 \caption{The contents of a file called \file{example.bib}.}
@@ -408,6 +424,7 @@ protected with double braces:
 \begin{verbatim}
 AUTHOR = {{The R Journal Editors}}
 \end{verbatim}
+Including the DOI of the reference is very desirable and may become compulsory soon.
 
 \subsection{Citing packages}
 
@@ -464,6 +481,8 @@ prepared by Kurt Hornik and Friedrich Leisch for the \emph{R Journal}
   headers. Support for wide figures (widefigure) and tables (widetable)
 
 \item v0.13 2013/08/27 --- Added \verb|\BIOpkg| for Bioconductor packages.
+
+\item v0.14 2017/01/09 --- Revised Introduction to adapt classes of solicited submissions to changing needs and high submission volumes of single package articles. Added hooks for licence and plagiarism.
 
 \end{itemize}
 
