--- a/share/RJreferences.bib
+++ b/share/RJreferences.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2012},
+  year = {2016},
   note = {{ISBN} 3-900051-07-0},
   url = {http://www.R-project.org/},
 }
@@ -15,4 +15,6 @@
 	Pages = {299--314},
 	Title = {R: A Language for Data Analysis and Graphics},
 	Volume = 5,
-	Year = 1996}
+	Year = 1996,
+        doi = {10.1080/10618600.1996.10474713}
+}
